editor-components/location/location1/location1.module.scss
@use "../../../composer-base-components/base/utitilities/viewports.module.scss" as *;

.container {
  position: relative;

  .max-content {
    display: flex;
    flex-direction: column;
    gap: var(--composer-gap-xl);

    .header {
      display: flex;
      align-items: flex-end;
      justify-content: center;
      gap: var(--composer-gap-lg);

      .vertical-content {

        .subtitle,
        .title,
        .description {
          text-align: left;
          margin-left: 0;
        }
      }

      .divider {
        width: 200px;
        height: 1px;
        background-color: var(--composer-tertiary-color);
        margin: var(--composer-gap-md) 0;
      }

      .icon-container {
        display: flex;
        align-items: center;
        gap: var(--composer-gap-lg);
        margin-bottom: var(--composer-gap-sm);

        .icon-wrapper {
          display: flex;
          justify-content: center;
          align-items: center;
          position: relative;
          overflow: visible;

          .icon {
            display: flex;
            justify-content: center;
            align-items: center;
            font-size: 2rem;
            color: var(--composer-font-color-primary);
          }

          .icon-wrapper:hover .icon {
            color: var(--composer-font-color-secondary) !important;
          }

          &[data-animation~="animate1"] {
            &::before {
              content: "";
              position: absolute;
              left: 50%;
              top: 45%;
              transform: translate(-50%, -50%) scale(0);
              width: var(--composer-gap-xl);
              height: var(--composer-gap-xl);
              border-radius: 50%;
              background-color: var(--composer-font-color-primary);
              z-index: 0;
              transition: transform 0.25s ease, opacity 0.25s ease, background-color 0.2s ease;
              opacity: 0;
            }

            &:hover::before {
              transform: translate(-50%, -50%) scale(1);
              opacity: 1;
              background-color: var(--composer-primary-color);
            }
          }
        }
      }

      .right-block {
        display: flex;
        align-items: center;
        margin-left: auto;
        gap: var(--composer-gap-sm);

        .divider {
          display: block;
          height: 1px;
          background-color: var(--composer-tertiary-color);
          margin: 0 var(--composer-gap-sm);
          width: 200px !important;
          align-self: center;
        }
      }
    }

    .map-container {
      display: flex;
      justify-content: center;
      align-items: center;
      width: 100%;
      max-width: 100%;
      margin: 0;
      border-radius: var(--composer-border-radius-sm);
      overflow: hidden;

      .map {
        width: 100%;
        height: 700px;
        border-radius: var(--composer-border-radius-sm);
      }
    }

    .bottom-container {
      width: 100%;
      display: flex;
      gap: var(--composer-gap-xs);
      align-items: center;
      justify-content: center;

      .bottom-title {
        padding: 0;
        color: var(--composer-font-color-primary);
        max-width: 50%;
        margin: 0;
        display: inline-block;
        width: auto;
      }



      .phone {
        color: var(--composer-font-color-primary);
        width: fit-content;
        border-bottom: solid 2px var(--composer-font-color-primary);
        margin: 0;
        padding: 0;
        text-align: left;
      }

      &.center {
        justify-content: center;
        gap: var(--composer-gap-md);

        .bottom-title {
          margin-right: var(--composer-gap-xs);
          max-width: 80%;
          padding: 0;
          text-align: center;
        }

        width: auto;
        display: flex;
        justify-content: center;
        gap: var(--composer-gap-xs);

        .phone {
          text-align: center;
        }
      }

      &.left {
        justify-content: center;
        gap: var(--composer-gap-md);

        .bottom-title {
          margin-right: var(--composer-gap-xs);
          max-width: 80%;
          padding: 0;
          text-align: center;
        }

        .phone {
          text-align: center;
        }
      }
    }

    .popup {
      background-color: var(--composer-html-background);
      width: 250px;
      min-height: auto;
      text-align: center;
      display: flex;
      justify-content: space-between;
      align-items: center;
      flex-direction: column;
      margin: 0;
      border-radius: var(--composer-border-radius-sm);

      .popup-header {
        display: flex;
        flex-direction: column;
        gap: var(--composer-gap-sm);
        padding: var(--composer-gap-md);

        .popup-title {
          color: var(--composer-font-color-primary);
          margin: 0;
          text-align: center;
        }

        .popup-content {
          color: var(--composer-tertiary-color);
          text-align: center;
          margin: 0;
        }
      }

      .popup-link {
        z-index: 10;
        cursor: pointer;
        width: 100%;

        .popup-button {
          background-color: var(--composer-font-color-primary);
          color: var(--composer-html-background);
          width: 100%;
          padding: var(--composer-gap-md);
          border-bottom-left-radius: var(--composer-border-radius-sm);
          border-bottom-right-radius: var(--composer-border-radius-sm);
          display: flex;
          justify-content: center;
          align-items: center;
          gap: var(--composer-gap-xs);

          .popup-button-icon {
            font-size: 1.25rem;
            color: var(--composer-html-background);
            display: flex;
            align-items: center;
            justify-content: center;
          }
        }
      }
    }
  }
}

@container (max-width: #{$composer-tablet-width}) {
  .container {
    .max-content {
      gap: var(--composer-gap-md);

      .popup {
        width: 200px;

        .popup-header {
          gap: var(--composer-gap-sm);
        }
      }
    }
  }
}

@container (max-width: #{$composer-phone-width}) {
  .container {
    .max-content {
      gap: var(--composer-gap-md);

      .header {
        display: flex;
        align-items: center;
        justify-content: center;
        gap: var(--composer-gap-md);
        flex-direction: column;

        .divider {
          display: none;
        }

        .icon-container {
          .icon-wrapper {
            .icon {
              font-size: 1.5rem;
            }

            &[data-animation~="animate1"] {
              &::before {
                width: calc(var(--composer-gap-xl) * 0.7);
                height: calc(var(--composer-gap-xl) * 0.7);
              }
            }
          }
        }

        .icon-container {
          width: 100%;
          justify-content: center;
          margin-top: var(--composer-gap-sm);
        }

        .icon-container {
          width: 100%;
          justify-content: center;
          margin-top: var(--composer-gap-sm);
        }
      }

      .map-container {
        .map {
          height: 350px;
        }
      }

      .bottom-container {
        display: flex;
        flex-direction: column;
        gap: var(--composer-gap-md);

        .bottom-title {
          max-width: 100%;
          text-align: center;
        }

        .phone {
          font-size: 1.5rem;
          text-align: center;
        }
      }
    }
  }
}

